--- a/kafka/docker-compose.yaml
+++ b/kafka/docker-compose.yaml
@@ -6,22 +6,27 @@ services:
     container_name: kafka
     ports:
       - "9092:9092"
-
+      - "9093:9093"
     environment:
       KAFKA_KRAFT_MODE: 'true'
-
       CLUSTER_ID: '1L6g7nGhU-eAKfL--X25wo'
       KAFKA_NODE_ID: 1
-
       KAFKA_PROCESS_ROLES: broker,controller
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
 
+      # Single-broker settings
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+      # Listeners (local clients use localhost)
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
 
-      KAFKA_LOG_DIRS: /tmp/kraft-combined-logs
+      # Log directory (persistent volume)
+      KAFKA_LOG_DIRS: /var/lib/kafka/data
+
+      # Automatically create topics if they do not exist
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
 
     volumes:
       - kafka_kraft:/var/lib/kafka/data
