--- a/k8s/spark-rbac.yaml
+++ b/k8s/spark-rbac.yaml
@@ -1,30 +1,27 @@
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: spark
-  namespace: bigdata-pipeline
----
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: spark-role
   namespace: bigdata-pipeline
 rules:
+  # Spark needs to create/list/watch/delete pods/services/configmaps (and sometimes PVCs)
   - apiGroups: [""]
-    resources: ["pods", "pods/log", "pods/status"]
-    verbs: ["create", "get", "list", "watch", "delete", "patch", "update"]
-
-  - apiGroups: [""]
-    resources: ["services", "endpoints"]
-    verbs: ["create", "get", "list", "watch", "delete", "patch", "update"]
-
-  - apiGroups: [""]
-    resources: ["configmaps"]
-    verbs: ["create", "get", "list", "watch", "delete", "patch", "update"]
-
-  - apiGroups: [""]
-    resources: ["events"]
-    verbs: ["create", "patch", "update"]
+    resources:
+      - pods
+      - pods/log
+      - services
+      - configmaps
+      - persistentvolumeclaims
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - delete
+      - patch
+      - update
+      # Required because Spark uses "DELETE ...?labelSelector=..."
+      - deletecollection
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
