--- a/k8s/kafka.yaml
+++ b/k8s/kafka.yaml
@@ -10,9 +10,6 @@ spec:
     - name: broker
       port: 9092
       targetPort: 9092
-    - name: controller
-      port: 9093
-      targetPort: 9093
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -29,54 +26,36 @@ spec:
       labels:
         app: kafka
     spec:
-      securityContext:
-        fsGroup: 1000
       containers:
         - name: kafka
           image: confluentinc/cp-kafka:7.6.1
           ports:
             - containerPort: 9092
               name: broker
-            - containerPort: 9093
-              name: controller
-          env:
-            - name: KAFKA_PROCESS_ROLES
-              value: "broker,controller"
-            - name: KAFKA_NODE_ID
-              value: "1"
-            - name: KAFKA_CONTROLLER_QUORUM_VOTERS
-              value: "1@kafka-svc:9093"
-            - name: KAFKA_CONTROLLER_LISTENER_NAMES
-              value: "CONTROLLER"
 
-            - name: KAFKA_LISTENERS
-              value: "PLAINTEXT://:9092,CONTROLLER://:9093"
-            - name: KAFKA_ADVERTISED_LISTENERS
-              value: "PLAINTEXT://kafka-svc:9092"
-            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
-              value: "PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT"
-            - name: KAFKA_INTER_BROKER_LISTENER_NAME
-              value: "PLAINTEXT"
+          
+          command: ["bash", "-lc"]
+          args:
+            - |
+              set -euo pipefail
+              echo "[kafka] starting via kafka-server-start with mounted server.properties"
+              export KAFKA_HEAP_OPTS="-Xms256m -Xmx512m"
+              exec kafka-server-start /etc/kafka/server.properties
 
-            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
-              value: "1"
-            - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
-              value: "1"
-            - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
-              value: "1"
-            - name: KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS
-              value: "0"
-
-            - name: KAFKA_LOG_DIRS
-              value: "/var/lib/kafka/data"
-
-            - name: CLUSTER_ID
-              value: "fC9rVnWcT9WQ3gJvQx4xVw"
+          resources:
+            requests:
+              memory: "1Gi"
+              cpu: "250m"
+            limits:
+              memory: "1.5Gi"
+              cpu: "1"
 
           volumeMounts:
-            - name: kafka-data
-              mountPath: /var/lib/kafka/data
+            - name: kafka-config
+              mountPath: /etc/kafka/server.properties
+              subPath: server.properties
 
       volumes:
-        - name: kafka-data
-          emptyDir: {}
+        - name: kafka-config
+          configMap:
+            name: kafka-config
